wxcl/src/misc/cffi/wxExtra.lisp


(defcfun ("wxcDirSelector" wxcDirSelector) :lisp-string
  (message :string)
  (path :string)
  (style :long)
  (x :int)
  (y :int)
  (parent :pointer))

(defcfun ("wxcFileSelector" wxcFileSelector) :lisp-string
  (message :string)
  (path :string)
  (filename :string)
  (extension :string)
  (wildcard :string)
  (flags :int)
  (parent :pointer)
  (x :int)
  (y :int))

(defcfun ("wxcGetColourFromUser" wxcGetColourFromUser) :pointer
  (parent :pointer)
  (colInit :pointer))

(defcfun ("wxcGetFontFromUser" wxcGetFontFromUser) :pointer
  (parent :pointer)
  (fontInit :pointer))

(defcfun ("wxcGetPasswordFromUser" wxcGetPasswordFromUser) :lisp-string
  (message :string)
  (caption :string)
  (defaultText :string)
  (parent :pointer)
  (x :int)
  (y :int)
  (center :int))

(defcfun ("wxcGetTextFromUser" wxcGetTextFromUser) :lisp-string
  (message :string)
  (caption :string)
  (defaultText :string)
  (parent :pointer)
  (x :int)
  (y :int)
  (center :int))

(defcfun ("wxcGetNumberFromUser" wxcGetNumberFromUser) :long
  (message :string)
  (prompt :string)
  (caption :string)
  (value :long)
  (min :long)
  (max :long)
  (parent :pointer)
  (x :int)
  (y :int))

(defcfun ("wxcMessageBox" wxcMessageBox) :int
  (message :string)
  (caption :string)
  (style :int)
  (parent :pointer)
  (x :int)
  (y :int))

(defcfun ("wxcBell" wxcBell) :void)

(defcfun ("wxcBeginBusyCursor" wxcBeginBusyCursor) :void)

(defcfun ("wxcIsBusy" wxcIsBusy) :int)

(defcfun ("wxcEndBusyCursor" wxcEndBusyCursor) :void)

(defcfun ("wxInputSink_Create" wxInputSink_Create) :pointer
  (input :pointer)
  (evtHandler :pointer)
  (bufferLen :int))

(defcfun ("wxInputSink_GetId" wxInputSink_GetId) :int
  (obj :pointer))

(defcfun ("wxInputSink_Start" wxInputSink_Start) :void
  (obj :pointer))

(defcfun ("wxInputSinkEvent_LastError" wxInputSinkEvent_LastError) :int
  (obj :pointer))

(defcfun ("wxInputSinkEvent_LastRead" wxInputSinkEvent_LastRead) :int
  (obj :pointer))

(defcfun ("wxInputSinkEvent_LastInput" wxInputSinkEvent_LastInput) :lisp-string
  (obj :pointer))

(defcfun ("wxcHtmlEvent_GetMouseEvent" wxcHtmlEvent_GetMouseEvent) :pointer
  (_obj :pointer))

(defcfun ("wxcHtmlEvent_GetHtmlCell" wxcHtmlEvent_GetHtmlCell) :pointer
  (_obj :pointer))

(defcfun ("wxcHtmlEvent_GetHtmlCellId" wxcHtmlEvent_GetHtmlCellId) :pointer
  (_obj :pointer))

(defcfun ("wxcHtmlEvent_GetHref" wxcHtmlEvent_GetHref) :pointer
  (_obj :pointer))

(defcfun ("wxcHtmlEvent_GetTarget" wxcHtmlEvent_GetTarget) :pointer
  (_obj :pointer))

(defcfun ("wxcHtmlEvent_GetLogicalPosition" wxcHtmlEvent_GetLogicalPosition) :void
  (_obj :pointer)
  (x :int)
  (y :int))

(defcfun ("wxHtmlWindow_Create" wxHtmlWindow_Create) :pointer
  (_prt :pointer)
  (_id :int)
  (_lft :int)
  (_top :int)
  (_wdt :int)
  (_hgt :int)
  (_stl :long)
  (_txt :string))

(defcfun ("wxcHtmlWindow_Create" wxcHtmlWindow_Create) :pointer
  (_prt :pointer)
  (_id :int)
  (_lft :int)
  (_top :int)
  (_wdt :int)
  (_hgt :int)
  (_stl :long)
  (_txt :string))

(defcfun ("wxHtmlWindow_AppendToPage" wxHtmlWindow_AppendToPage) :int
  (_obj :pointer)
  (source :string))

(defcfun ("wxHtmlWindow_GetInternalRepresentation" wxHtmlWindow_GetInternalRepresentation) :pointer
  (_obj :pointer))

(defcfun ("wxHtmlWindow_GetOpenedAnchor" wxHtmlWindow_GetOpenedAnchor) :lisp-string
  (_obj :pointer))

(defcfun ("wxHtmlWindow_GetOpenedPage" wxHtmlWindow_GetOpenedPage) :lisp-string
  (_obj :pointer))

(defcfun ("wxHtmlWindow_GetOpenedPageTitle" wxHtmlWindow_GetOpenedPageTitle) :lisp-string
  (_obj :pointer))

(defcfun ("wxHtmlWindow_GetRelatedFrame" wxHtmlWindow_GetRelatedFrame) :pointer
  (_obj :pointer))

(defcfun ("wxHtmlWindow_HistoryBack" wxHtmlWindow_HistoryBack) :int
  (_obj :pointer))

(defcfun ("wxHtmlWindow_HistoryCanBack" wxHtmlWindow_HistoryCanBack) :int
  (_obj :pointer))

(defcfun ("wxHtmlWindow_HistoryCanForward" wxHtmlWindow_HistoryCanForward) :int
  (_obj :pointer))

(defcfun ("wxHtmlWindow_HistoryClear" wxHtmlWindow_HistoryClear) :void
  (_obj :pointer))

(defcfun ("wxHtmlWindow_HistoryForward" wxHtmlWindow_HistoryForward) :int
  (_obj :pointer))

(defcfun ("wxHtmlWindow_LoadPage" wxHtmlWindow_LoadPage) :int
  (_obj :pointer)
  (location :string))

(defcfun ("wxHtmlWindow_ReadCustomization" wxHtmlWindow_ReadCustomization) :void
  (_obj :pointer)
  (cfg :pointer)
  (path :string))

(defcfun ("wxHtmlWindow_SetBorders" wxHtmlWindow_SetBorders) :void
  (_obj :pointer)
  (b :int))

(defcfun ("wxHtmlWindow_SetFonts" wxHtmlWindow_SetFonts) :void
  (_obj :pointer)
  (normal_face :string)
  (fixed_face :string)
  (sizes :int))

(defcfun ("wxHtmlWindow_SetPage" wxHtmlWindow_SetPage) :int
  (_obj :pointer)
  (source :string))

(defcfun ("wxHtmlWindow_SetRelatedFrame" wxHtmlWindow_SetRelatedFrame) :void
  (_obj :pointer)
  (frame :pointer)
  (format :string))

(defcfun ("wxHtmlWindow_SetRelatedStatusBar" wxHtmlWindow_SetRelatedStatusBar) :void
  (_obj :pointer)
  (bar :int))

(defcfun ("wxHtmlWindow_WriteCustomization" wxHtmlWindow_WriteCustomization) :void
  (_obj :pointer)
  (cfg :pointer)
  (path :string))

(defcfun ("wxLogStderr_Create" wxLogStderr_Create) :pointer)

(defcfun ("wxLogStderr_CreateStdOut" wxLogStderr_CreateStdOut) :pointer)

(defcfun ("wxLogNull_Create" wxLogNull_Create) :pointer)

(defcfun ("wxLogTextCtrl_Create" wxLogTextCtrl_Create) :pointer
  (text :pointer))

(defcfun ("wxLogWindow_Create" wxLogWindow_Create) :pointer
  (parent :pointer)
  (title :string)
  (showit :int)
  (passthrough :int))

(defcfun ("wxLogWindow_GetFrame" wxLogWindow_GetFrame) :pointer
  (obj :pointer))

(defcfun ("wxLog_Delete" wxLog_Delete) :void
  (_obj :pointer))

(defcfun ("wxLog_OnLog" wxLog_OnLog) :void
  (_obj :pointer)
  (level :int)
  (szString :pointer)
  (t :int))

(defcfun ("wxLog_Flush" wxLog_Flush) :void
  (_obj :pointer))

(defcfun ("wxLog_HasPendingMessages" wxLog_HasPendingMessages) :int
  (_obj :pointer))

(defcfun ("wxLog_FlushActive" wxLog_FlushActive) :void
  (_obj :pointer))

(defcfun ("wxLog_GetActiveTarget" wxLog_GetActiveTarget) :pointer)

(defcfun ("wxLog_SetActiveTarget" wxLog_SetActiveTarget) :pointer
  (pLogger :pointer))

(defcfun ("wxLog_Suspend" wxLog_Suspend) :void
  (_obj :pointer))

(defcfun ("wxLog_Resume" wxLog_Resume) :void
  (_obj :pointer))

(defcfun ("wxLog_SetVerbose" wxLog_SetVerbose) :void
  (_obj :pointer)
  (bVerbose :int))

(defcfun ("wxLog_DontCreateOnDemand" wxLog_DontCreateOnDemand) :void
  (_obj :pointer))

(defcfun ("wxLog_SetTraceMask" wxLog_SetTraceMask) :void
  (_obj :pointer)
  (ulMask :int))

(defcfun ("wxLog_AddTraceMask" wxLog_AddTraceMask) :void
  (_obj :pointer)
  (str :pointer))

(defcfun ("wxLog_RemoveTraceMask" wxLog_RemoveTraceMask) :void
  (_obj :pointer)
  (str :pointer))

(defcfun ("wxLog_SetTimestamp" wxLog_SetTimestamp) :void
  (_obj :pointer)
  (ts :pointer))

(defcfun ("wxLog_GetVerbose" wxLog_GetVerbose) :int
  (_obj :pointer))

(defcfun ("wxLog_GetTraceMask" wxLog_GetTraceMask) :int
  (_obj :pointer))

(defcfun ("wxLog_IsAllowedTraceMask" wxLog_IsAllowedTraceMask) :int
  (_obj :pointer)
  (mask :pointer))

(defcfun ("wxLog_GetTimestamp" wxLog_GetTimestamp) :pointer
  (_obj :pointer))

(defcfun ("LogError" LogError) :void
  (_msg :pointer))

(defcfun ("LogFatalError" LogFatalError) :void
  (_msg :pointer))

(defcfun ("LogWarning" LogWarning) :void
  (_msg :pointer))

(defcfun ("LogMessage" LogMessage) :void
  (_msg :pointer))

(defcfun ("LogVerbose" LogVerbose) :void
  (_msg :pointer))

(defcfun ("LogStatus" LogStatus) :void
  (_msg :pointer))

(defcfun ("LogSysError" LogSysError) :void
  (_msg :pointer))

(defcfun ("LogDebug" LogDebug) :void
  (_msg :pointer))

(defcfun ("LogTrace" LogTrace) :void
  (mask :pointer)
  (_msg :pointer))

(defcfun ("wxGridCellTextEnterEditor_Ctor" wxGridCellTextEnterEditor_Ctor) :pointer)

(defcfun ("wxConfigBase_Get" wxConfigBase_Get) :pointer)

(defcfun ("wxConfigBase_Set" wxConfigBase_Set) :void
  (self :pointer))

(defcfun ("wxFileConfig_Create" wxFileConfig_Create) :pointer
  (inp :pointer))
